# Ars_Animaglyphica

./: GODEL_BRIDGE.md  README.md  commit.txt  expand_types.py  pyproject.toml
ars_anima/: __init__.py  cli.py  elaborator.py  types.py
ars_animaglyphica.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
data/: catalog.json
illustrations/: lattice.txt  morphology_report.txt  summary.txt
lean/: ArsAnimaglyphica.lean
