[project]
name = "ars-animaglyphica"
version = "0.1.0"
description = "Animal Morphological Imscription Engine — reads pharmaceutical meaning from animal morphology"
authors = [{name = "Lando⊗⊙perator"}]
requires-python = ">=3.10"

[project.scripts]
ag = "ars_anima.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
